# octvencode-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  OTBV.pc.in  README.md
include/: octvencode.h  otbv.h
samples/: README.md
samples/job_1_6p_6c_26d/: sample_0.otbv  sample_1.otbv
samples/job_2_6p_10c_26d/: sample_0.otbv  sample_1.otbv
samples/job_3_8p_6c_26d/: sample_0.otbv  sample_1.otbv
samples/job_4_8p_10c_26d/: sample_0.otbv  sample_1.otbv
src/: conversion.cpp  conversion.h  io.cpp  io.h
tests/: tests.cpp
